2008-09-24  Alper KANAT  <alperkanat@gmail.com>

	* extra/webcal.py, blog/templatetags/blog_filters.py: can exclude anything
	from the object being rendered into the web calendar..
	* extra/messages.py: added new messages..
	* extra/captcha.py: there's a bug in the registration form that comes up
	when unicode characters are entered into the captcha.. this might fix it..
	* comments/views.py, comments/forms.py, templates/blog/comments.html:
	anonymous comments can be entered now.. this needs more testing btw.. using
	forms api to validate the comments form (but only when anonymous comments
	are allowed which might change in the future.. has put a FIXME there..) i
	really hate long views.. it seems kinda wrong..
	* templates/blog/latest_comments.html: anonymous users' names and web sites
	are shown in the latest comments now.. using spaceless template tag in here
	because otherwise it'd be too hard to read the code..
	* .htaccess: http://svn.raptiye.org is now redirected to
	http://raptiye.org.. maybe i should really stop being so paranoid and let
	the http protocol free for svn..
	
2008-09-19  Alper KANAT  <alperkanat@gmail.com>

	* media/css/style.css, settings-example.py, blog/views.py,
	comments/views.pycomments/templatetags/comment_filters.py,
	comments/models.py, comments/forms.py, templates/blog/comments.html:
	comments section in the blog detail page now uses django forms and is
	currently under heavy development for anonymous comments..
	
2008-09-16  Alper KANAT  <alperkanat@gmail.com>

	* media/js/tiny_mce/textarea.js: some enhancement for tinymce..
	* templates/blog/poll.html: thanks to Onur GÜVEN, fixed a typo bug which
	prevented the poll from working..
	* media/js/tiny_mce/textarea.js: resolved the <p> and <br> problem..

2008-09-15  Alper KANAT  <alperkanat@gmail.com>

	* blog/admin.py, media/js/tiny_mce: Blog entries' and flatpages' admin page
	now has TinyMCE support.. (WYSIWYG HTML Editor support is added)
